--- a/index.html
+++ b/index.html
@@ -40,11 +40,12 @@ https://templatemo.com/tm-573-eduwell
                   <nav class="main-nav">
                       <!-- ***** Logo Start ***** -->
                       <a href="index.html" class="logo">
-                          <img src="assets/images/templatemo-eduwell.png" alt="EduWell Template">
+                          <img style="width:60px; height:60px;" src="assets/images/app-icon.png" alt="EduWell Template">
+                          <span>Explicador inc - English Curse</span>
                       </a>
                       <!-- ***** Logo End ***** -->
                       <!-- ***** Menu Start ***** -->
-                      <ul class="nav">
+                      <!-- <ul class="nav">
                           <li class="scroll-to-section"><a href="#top" class="active">Home</a></li>
                           <li class="scroll-to-section"><a href="#services">Services</a></li>
                           <li class="scroll-to-section"><a href="#courses">Courses</a></li>
@@ -58,7 +59,7 @@ https://templatemo.com/tm-573-eduwell
                           </li>
                           <li class="scroll-to-section"><a href="#testimonials">Testimonials</a></li> 
                           <li class="scroll-to-section"><a href="#contact-section">Contact Us</a></li> 
-                      </ul>        
+                      </ul>         -->
                       <a class='menu-trigger'>
                           <span>Menu</span>
                       </a>
@@ -76,8 +77,9 @@ https://templatemo.com/tm-573-eduwell
       <div class="row">
         <div class="col-lg-6 align-self-center">
           <div class="header-text">
-            <h6>Welcome to our school</h6>
-            <h2>Best Place To Learn Graphic <em>Design!</em></h2>
+            <h2 style="color:#FFCAC8;">Curso Online De</h2>
+            <h1 style="font-size:100px; font-weight: 900; color:#FF9E9E; font-style:italic;">INGLÊS</h1>
+            <h2 style="color:#FFCAC8;">PARA INICIANTES</h2>
             <div class="main-button-gradient">
               <div class="scroll-to-section"><a href="#contact-section">Join Us Now!</a></div>
             </div>
