--- a/index.html
+++ b/index.html
@@ -78,10 +78,10 @@ https://templatemo.com/tm-573-eduwell
         <div class="col-lg-6 align-self-center">
           <div class="header-text">
             <h2 style="color:#FFCAC8;">Curso Online De</h2>
-            <h1 style="font-size:100px; font-weight: 900; color:#FF9E9E; font-style:italic;">INGLÊS</h1>
+            <h1 style="font-size:70px; font-weight: 900; color:#FF9E9E; font-style:italic;">INGLÊS</h1>
             <h2 style="color:#FFCAC8;">PARA INICIANTES</h2>
             <div class="main-button-gradient">
-              <div class="scroll-to-section"><a href="#contact-section">Join Us Now!</a></div>
+              <div class="scroll-to-section"><a href="">Inscreva-se</a></div>
             </div>
           </div>
         </div>
