--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ https://templatemo.com/tm-573-eduwell
   </section>
   <!-- ***** Main Banner Area End ***** -->
 
-  <section class="services" id="services">
+  <!-- <section class="services" id="services">
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
@@ -218,7 +218,7 @@ https://templatemo.com/tm-573-eduwell
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 
   <section class="our-courses" id="courses">
     <div class="container">
