--- a/index.html
+++ b/index.html
@@ -225,9 +225,7 @@ https://templatemo.com/tm-573-eduwell
       <div class="row">
         <div class="col-lg-6 offset-lg-3">
           <div class="section-heading">
-            <h6>OUR COURSES</h6>
-            <h4>What You Can <em>Learn</em></h4>
-            <p>You just think about TemplateMo whenever you need free CSS templates for your business website</p>
+            <p>Aprenda a Falar inglês sem sair de casa por <span style="color:#FF9E9E;">apenas 199.00Mtn</span> Aprenda do básico ao avançado com videos aulas diretas de 10 a no máximo 20 minutos com passo a passo de todos os módulos, você vai aprender tudo o que você precisa saber para dominar a lingua inglês.</p>
           </div>
         </div>
         <div class="col-lg-12">
