chore: edição da localizacao e formulario

--- a/index.html
+++ b/index.html
@@ -417,15 +417,15 @@ https://templatemo.com/tm-573-eduwell
           <div id="map">
           
             <!-- You just need to go to Google Maps for your own map point, and copy the embed code from Share -> Embed a map section -->
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7151.84524236698!2d-122.19494600413192!3d47.56605883252286!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5490695e625f8965%3A0xf99b055e76477def!2sNewcastle%20Beach%20Park%20Playground%2C%20Bellevue%2C%20WA%2098006%2C%20USA!5e0!3m2!1sen!2sth!4v1644335269264!5m2!1sen!2sth" width="100%" height="420px" frameborder="0" style="border:0; border-radius: 15px; position: relative; z-index: 2;" allowfullscreen=""></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3587.056513564646!2d32.571223514947945!3d-25.96618686064491!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1ee69b22d44a5b77%3A0xee80b539fa179093!2sExplicador%20Inc%2C%20Mo%C3%A7ambique!5e0!3m2!1spt-PT!2smz!4v1670184439435!5m2!1spt-PT!2smz" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>"
             <div class="row">
               <div class="col-lg-4 offset-lg-1">
                 <div class="contact-info">
                   <div class="icon">
                     <i class="fa fa-phone"></i>
                   </div>
-                  <h4>Phone</h4>
-                  <span>010-020-0340</span>
+                  <h4>Contacto</h4>
+                  <span>info@explicador.co.mz</span>
                 </div>
               </div>
               <div class="col-lg-4">
@@ -434,7 +434,7 @@ https://templatemo.com/tm-573-eduwell
                     <i class="fa fa-phone"></i>
                   </div>
                   <h4>Mobile</h4>
-                  <span>090-080-0760</span>
+                  <span>+258 86 250 2502 +258 842 512 502</span>
                 </div>
               </div>
             </div>
@@ -445,29 +445,29 @@ https://templatemo.com/tm-573-eduwell
             <div class="row">
               <div class="col-lg-12">
                 <div class="section-heading">
-                  <h6>Contact us</h6>
-                  <h4>Say <em>Hello</em></h4>
-                  <p>IF you need a working contact form by PHP script, please visit TemplateMo's contact page for more info.</p>
+                  <h4>Pré <em>-inscrição</em></h4>
+                  <h5> Preencha o Formula a baixa!</h5>
                 </div>
               </div>
               <div class="col-lg-12">
                 <fieldset>
-                  <input type="name" name="name" id="name" placeholder="Full Name" autocomplete="on" required>
+                  <input type="name" name="name" id="name" placeholder="Nome Completo" autocomplete="on" required>
                 </fieldset>
               </div>
               <div class="col-lg-12">
                 <fieldset>
-                  <input type="text" name="email" id="email" pattern="[^ @]*@[^ @]*" placeholder="Your Email" required="">
+                  <input type="text" name="name" id="name" placeholder="Contacto" autocomplete="on" required>
                 </fieldset>
               </div>
               <div class="col-lg-12">
                 <fieldset>
-                  <textarea name="message" id="message" placeholder="Your Message"></textarea>
+                  <input type="text" name="email" id="email" pattern="[^ @]*@[^ @]*" placeholder="Email" required="">
                 </fieldset>
               </div>
+              
               <div class="col-lg-12">
                 <fieldset>
-                  <button type="submit" id="form-submit" class="main-gradient-button">Send Message</button>
+                  <button type="submit" id="form-submit" class="main-gradient-button">Submenter</button>
                 </fieldset>
               </div>
             </div>
