--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:100,200,300,400,500,600,700,800,900" rel="stylesheet">
 
-    <title>EduWell - Education HTML5 Template</title>
+    <title>Explicador inc</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -41,7 +41,7 @@ https://templatemo.com/tm-573-eduwell
                       <!-- ***** Logo Start ***** -->
                       <a href="index.html" class="logo">
                           <img style="width:60px; height:60px;" src="assets/images/app-icon.png" alt="EduWell Template">
-                          <span>Explicador inc - English Curse</span>
+                          <span>Explicador inc</span>
                       </a>
                       <!-- ***** Logo End ***** -->
                       <!-- ***** Menu Start ***** -->
@@ -342,14 +342,14 @@ https://templatemo.com/tm-573-eduwell
             <h6>3® Nivel 156 Mzn</h6> <br>  <h6>4® Nivel 286 Mzn</h6>
             <p>A partir do  3® nível o aluno tem direito a certificado</p>
             <div class="white-button">
-              <a href="contact-us.html">Ver Detalhes</a>
+              <!-- <a href="contact-us.html">Ver Detalhes</a> -->
             </div>
           </div>
         </div>
       </div>
     </section>
 
-  <section class="testimonials" id="testimonials">
+  <!-- <section class="testimonials" id="testimonials">
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
@@ -412,7 +412,7 @@ https://templatemo.com/tm-573-eduwell
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 
   <section class="contact-us" id="contact-section">
     <div class="container">
