fix : header bug

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ https://templatemo.com/tm-573-eduwell
                       <!-- ***** Logo Start ***** -->
                       <a href="index.html" class="logo">
                           <img style="width:60px; height:60px;" src="assets/images/app-icon.png" alt="EduWell Template">
-                          <span>Explicador inc</span>
+                          <span style="width:7px;">Explicador-inc</span>
                       </a>
                       <!-- ***** Logo End ***** -->
                       <!-- ***** Menu Start ***** -->
@@ -239,7 +239,7 @@ https://templatemo.com/tm-573-eduwell
               <div class="row">
                   <div style="text-align:center;" class="menu">
                     <div class="active gradient-border"><span> Você vai aprender Tudo o que você precisa saber para dominar inglês como por exemplo Leitura e escrita</span></div>
-                    <div class="gradient-border"><span> Alêm de todo o conteûdo do curso você ainda vai receber diversos Manuais 100% para te ajudar/span></div>
+                    <div class="gradient-border"><span> Alêm de todo o conteûdo do curso você ainda vai receber diversos Manuais 100% para te ajudar,</span></div>
                     <div class="gradient-border"><span>Faça a sua inscrição até dia 12 de Dezembro e Ganha bónus de 50% de desconto para o próximo nível</span></div>
                     <div class="gradient-border"><span> Os nossos cursos são ministrado com os melhores Formador que existe neste País .</span></div>
                   </div>
